# cd_lab_project

./: .gitignore  CMakeLists.txt  COMPILER_UI_BUILD_GUIDE.md  DEMO_COMMANDS.txt  DESIGN.md  EVALUATION.md  FILE_STRUCTURE.txt  IMPLEMENTATION.md  PROJECT_REPORT.md  PROJECT_REPORT.txt  README.md  build.sh  patch_main.py  run.sh
compiler-ide/: index.html  package-lock.json  package.json  tailwind.config.js
compiler-ide/backend/: main.py
compiler-ide/src/: App.jsx
compiler-ide/src/components/compiler/: BottomPanel.jsx  MetricsCard.jsx  PhaseList.jsx  ProblemsPanel.jsx  TokenPanel.jsx
compiler-ide/src/components/landing/: LandingPage.jsx
compiler-ide/src/components/layout/: AppShell.jsx  LeftSidebar.jsx  TopBar.jsx
compiler-ide/src/features/ast/: ASTViewer.jsx  astHelpers.js
compiler-ide/src/features/editor/: CenterPanel.jsx
compiler-ide/src/services/: api.js  compilerApi.js
compiler-ide/src/services/mock/: mockAST.js  mockCompiler.js  mockTokens.js
compiler-ide/src/store/: compilerStore.js
compiler-ide/src/styles/: globals.css
kernels/: kernel_sigmoid.c
src/: tool.cpp
testcases/: kernel_dot_product.c  kernel_double_demotion.c  kernel_double_extreme.c  kernel_fir_filter.c  kernel_int_extreme.c  kernel_int_quantization.c  kernel_polynomial.c  kernel_softmax.c  test.c
